# interfcaeOfCpp

./: CMakeLists.txt  README.md  main.cpp
include/: atom.h
src/: CMakeLists.txt  atom.cpp
